added pylint and django debug toolbar and added some documentation to the forms view

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 djoser = "*"
 django-restframework = "*"
 mysqlclient = "*"
+pylint = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 
