in the middle of working on login with JWT

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-restframework = "*"
 mysqlclient = "*"
 pylint = "*"
 django-debug-toolbar = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
